<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editGuest">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientbackground"
        tools:context=".Checkout">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="420dp"
            android:layout_height="60dp"
            android:background="#6EBAB0"
            android:visibility="visible"
            app:itemIconTint="@color/black"
            app:itemTextColor="#000000"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navmenu" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="234dp"
            android:layout_height="31dp"
            android:text="@string/txt12"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.048" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="43dp"
            android:layout_height="46dp"
            android:backgroundTint="#FFF6F6"
            android:foregroundTint="#E8DEDE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            app:tint="#FDFDFD" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="320dp"
            android:layout_height="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/txth1"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#A5A5A5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/txth2"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.293" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint ="@string/txth5"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.779" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/txth4"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="97dp"
            android:layout_height="49dp"
            android:buttonTint="#FFFCFC"
            android:text="@string/radiobutton1"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="97dp"
            android:layout_height="49dp"
            android:buttonTint="#FFFFFF"
            android:text="@string/radiobutton2"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.665" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="153dp"
            android:layout_height="56dp"
            android:text="@string/txt3"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.174"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.688" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="334dp"
            android:layout_height="63dp"
            android:ems="10"
            android:hint="@string/txth3"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.425" />

        <Button
            android:id="@+id/button"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:backgroundTint="#1ADb81"
            android:text="@string/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.884" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>